# scrapper-lattes

./: CHANGELOG.md  README.md  cnpq_researchers.db  debug_html_augusto.html  debug_page_2.html  debug_page_3.html  debug_post_K4787057H4.html  debug_preview_K4787057H4.html  example_output.py  main.py  old_cnpq_researchers.db  pyproject.toml  quick_performance_test.py  researchers.csv  test_augusto_sampaio.py  test_pagination.py  test_performance.py  test_project_extraction.py  test_search.html  view_detailed_results.py  view_results.py  view_results_charts.py
charts/: summary_report.md
